<resources>
    <string name="app_name">Arcane Driver</string>
    <string name="Google_api_key">Your Google Api Key</string>
    <string name="action_settings">Settings</string>
    <string name="appName">ARCANE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">Register</string>
    <string name="app_font">lato.ttf</string>
    <string name="or">or</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="cc">CC</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="continue_button">CONTINUE</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="txt_send_email_to_you">Enter you email address and we will send you a link to
        reset you password.
    </string>
    <string name="capital_forget_password">FORGOT PASSWORD</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="uploadText">Upload your Driving License and Vehicle Insurance file</string>
    <string name="upload_document">Upload Document</string>
    <string name="select_id">Please select a idproof to upload</string>
    <string name="licence">Please select a licence to upload</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="option">Select any option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="close">Cancel</string>
    <string name="take_ohoto">TAKE PHOTO</string>
    <string name="app_id">337950799925113</string>
    <string name="attachPhoto">Please attach your photo</string>
    <string name="title_activity_map_">Map</string>
    <string name="go_online">GO ONLINE</string>
    <string name="ok">OK</string>
    <string name="you_are_now_online">You are now online</string>
    <string name="you_are_now_offline">You are now offline</string>
    <string name="proof_not_accept">Your proof status is pending</string>
    <string name="go_offline">GO OFFLINE</string>
    <string name="not_now">Not now</string>
    <string name="attach_license">Please upload license proof to login</string>
    <string name="attach_id_proof">Please upload an ID proof to login</string>
    <string name="logout_msg">Do you want to Log out?</string>
    <string name="logout_header">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_trip">START TRIP</string>
    <string name="arriving_now">ARRIVE NOW</string>
    <string name="end_trip">END TRIP</string>
    <string name="complete_trip">COMPLETE TRIP</string>
    <string name="complete_rating">COMPLETE RATING</string>
    <string name="what_is_your_email">What is Your Email?</string>
    <string name="enter_valid_cc">Enter valid Country code</string>
    <string name="invalid_mobile_number">Invalid Mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="enter_a_valid_mobile_number">Enter a valid mobile number</string>
    <string name="submit">SUBMIT</string>
    <string name="request_from_rider">Request from rider</string>
    <string name="touch_to_accept">TOUCH TO ACCEPT</string>
    <string name="google_msg">Connecting to google...</string>
    <string name="fb_msg">Connecting to facebook...</string>
    <string name="earnings">Earnings</string>
    <string name="total_earnings">TOTAL EARNINGS</string>
    <string name="last_trip">Last Trip:</string>
    <string name="last_trip_time">Jan 4, 2017 11:55:05 AM</string>
    <string name="enter_country_code">Enter Country Code</string>
    <string name="overall_rating">OVERALL RATING</string>
    <string name="rating_content">Great work! you have good reputation</string>
    <string name="low_rating">You need to workhard..!!!</string>
    <string name="your_rating">Your rating</string>
    <string name="no_rating_yet">No Rating Yet..!</string>
    <string name="direction_api_key">Your direction api key</string>
    <string name="select_category">Please select the category</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="cancel_dis">Are you sure you want to cancel the trip?</string>
    <string name="rider_cancel">Trip has been cancelled by the Rider.</string>

    <string name="companyLink">http://www.cogzidel.com</string>
    <string name="productLink">http://www.cogzidel.com/uber-clone</string>
    <string name="licenseLink">https://opensource.org/licenses/mit-license.php</string>
</resources>
