<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header_layout"
                android:background="@color/colorWhite"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Sign In"

        android:textColor="@color/colorWhite"
        android:id="@+id/header"
        android:gravity="left|center"

        android:layout_alignParentTop="true" android:layout_toEndOf="@+id/back"/>



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:padding="5dp"
        android:src="@drawable/arrow_left"
        android:background="@color/appColor"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/scrollView"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:id="@+id/scrollView">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:singleLine="true"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="false"
                android:inputType="textEmailAddress"
                android:maxLength="254"
                android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@ "
                android:paddingRight="10dp"
                android:hint="@string/email"
                app:met_textColorHint="@color/colorPrimary"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:met_textColorHint="@color/colorPrimary"
                app:met_floatingLabelAlwaysShown="false"
                android:paddingRight="10dp"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabel="highlight"
                android:digits="._abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890#@_!"
                android:inputType="textPassword"
                android:hint="@string/password"
                />



            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="25dp"
                android:id="@+id/btnSignin"
                android:layout_marginLeft="5dp"
                android:text="@string/sign_in"
                android:layout_marginRight="5dp"
                android:layout_below="@+id/edtForgotEmail"
                android:paddingLeft="5dp"
                android:background="@color/appColor"
                />


            <Button
                android:layout_width="150dp"
                android:layout_height="55dp"

                android:text="Forgot Password"
                android:textColor="@color/appColor"
                android:layout_marginTop="25dp"
                android:id="@+id/btnForgotPassword"
android:gravity="center"
                android:layout_below="@+id/btnSignin"

                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>


    </ScrollView>



</RelativeLayout>
