<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/header_layout"
                android:background="@color/colorWhite"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/earnings"
        android:textColor="@color/colorWhite"
        android:id="@+id/header"
        android:gravity="left|center"
        android:layout_alignParentTop="true" android:layout_toEndOf="@+id/back"/>



    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/back"
        android:padding="5dp"
        android:src="@drawable/arrow_left"
        android:background="@color/appColor"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/scrollView"/>



<HorizontalScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/header"
    android:layout_alignEnd="@+id/header"
    android:layout_marginTop="114dp"
    android:id="@+id/textViewScroll"
    android:scrollbars="none"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"

        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:padding="5dp"
        android:maxLines="1"
        android:id="@+id/trip_amount"
        android:textColor="#7AC142"
        android:layout_gravity="center"
        android:textSize="90dp"
      />
</LinearLayout>
</HorizontalScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/lightGrey"
        android:text="@string/total_earnings"
        android:textStyle="bold"
        android:id="@+id/text_trip_summary"
        android:layout_below="@+id/textViewScroll"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewScroll"
        android:layout_toLeftOf="@+id/text_trip_summary"
        android:layout_toStartOf="@+id/text_trip_summary" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/textViewScroll"
        android:layout_toRightOf="@+id/text_trip_summary"
        android:layout_toEndOf="@+id/text_trip_summary" />

    <RelativeLayout
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:id="@+id/cashlay"
      android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cash"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/trip_date_layout"
        android:layout_below="@+id/txtWords"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:text="@string/last_trip"
            android:layout_marginLeft="5dp"
            android:textColor="@color/lightGrey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGrey"
            android:layout_marginLeft="5dp"
            android:id="@+id/timetrip"
            android:layout_toRightOf="@+id/time"
            />



    </RelativeLayout>

</RelativeLayout>
